# AI-Assistant

./: .gitignore  .pre-commit-config.yaml  README.md  project_structure_proposal.md  pyproject.toml  requirements-pi.txt
.github/workflows/: test.yml
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  audio.py  auth.py  days.py  fragments.py
backend/app/core/: __init__.py  auth.py  file_watcher.py  openai_client.py  whisper_processor.py
backend/app/models/: __init__.py  database.py  day.py  fragment.py
backend/app/utils/: __init__.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/day/[date]/: page.tsx
frontend/src/app/days/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AudioPlayer.tsx  RetrospectiveEditor.tsx  SynchronizedText.tsx
frontend/src/contexts/: AuthContext.tsx
libs/: __init__.py  config.py  exceptions.py
raspberry-pi/: __init__.py  audio_recorder.py  config.py  file_sender.py
scripts/: setup_pi.sh
tests/: test_backend_core.py  test_basic.py  test_comprehensive.py  test_integration_backend.py
